# scitq

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  MANTRA.md  Makefile  NOTES.md  README.md  ROADMAP.md  go.mod  go.sum  my.db
python/: .gitignore  DESIGN_README.md  README.md  bootstrap.go  embed.go  pyproject.proto  pyproject.toml  python-src.tgz
python/examples/: hello_goodbye_long.py  hello_goodbye_with_failures.py  helloworld.py  helloworld_multi.py  helloworld_multi_slow.py  metaphlan.py
python/tests/: test_gpu_all_sentinel.py  test_lines_iterator.py  test_module_did_you_mean.py  test_nextflow_converter.py  test_param_float.py  test_publish_mode.py  test_runner.py  test_task_spec_curves.py  test_unique_suffix.py  test_uri_find_filters_dirs.py  test_worker_pool_image.py  test_workflow_extend.py  test_workflow_id_publish.py  test_workflow_run_strategy.py  test_yaml_depends.py  test_yaml_expressions.py  test_yaml_filters.py  test_yaml_grouped_iter.py  test_yaml_iterate_cond.py  test_yaml_nested_import.py  test_yaml_requires.py  test_yaml_tag.py  test_yaml_task_spec_cond.py  test_yaml_tsv_composite_key.py  test_yaml_tsv_iter.py
server/: Cargo.toml  assigntask.go  assigntask_nofit_test.go  auth.go  error_class.go  error_class_test.go  flavor_stats.go  gate_test.go  http.go  jobqueue.go  main.go  mcp.go  mcp_docs.go  orphan_cleanup.go  quality.go  server.go  stepstats.go  stuck_delete_cleanup.go  syncproviders.go  task_curves.go  test_seams.go  version_compare.go  version_compare_test.go  worker_event.go  workflow_chain.go  workflow_chain_fire.go  workflow_templates.go
(+451 files in other folders)
