[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
chrono = { workspace = true }
common = { path = "../common" }
sled = "0.34"
bincode = "1.3"
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }